--- a/src/views/auth/login/get.ejs
+++ b/src/views/auth/login/get.ejs
@@ -4,18 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login</title>
+
+  <%- include("../../partials/styles.ejs") %>
+
 </head>
 <body>
 
-  <form method="post">
+  <form method="post" class="form-group card border-0 w-25 mx-auto p-5 mt-5">
     <h1>Login</h1>
-    <div>
+    <div class="mt-4">
       <label for="email">Email</label>
-      <input type="email" name="email" id="email">
+      <input class="form-control" type="email" name="email" id="email" required>
     </div>
-    <div>
+    <div class="mt-2">
       <label for="password">Password</label>
-      <input type="password" name="password" id="password">
+      <input class="form-control" type="password" name="password" id="password" required>
     </div>
 
     <% if (error) { %>
@@ -24,12 +27,13 @@
       </div>
     <% } %>
 
-    <button type="submit">Login</button>
+    <button type="submit" class="btn btn-success mt-5">Login</button>
+
+    <div class="mt-5 text-center">
+      <a href="/auth/register">Create an Account</a>
+    </div>
   </form>
-  <br>
-  <div>
-    <a href="/auth/register">Create an Account</a>
-  </div>
+  
 
 </body>
 </html>
