--- a/src/views/labeling/get.ejs
+++ b/src/views/labeling/get.ejs
@@ -10,11 +10,7 @@
 </head>
 <body>
 
-  <header class="bg-light border-bottom">
-    <nav class="navbar px-3">
-      <h4>Labeling Tasks</h4>
-    </nav>
-  </header>
+  <%- include("../partials/navbar.ejs") %>
 
   <main class="container-fluid">
     <aside class="float-sm-end p-3 border-start col-2 sticky-top" style="overflow-y: scroll; height: 100vh;">
