--- a/src/views/index/get.ejs
+++ b/src/views/index/get.ejs
@@ -4,10 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home</title>
+
+  <%- include("../partials/styles.ejs") %>
+
 </head>
 <body>
 
-  <h1>Welcome Home</h1>
+  <%- include("../partials/navbar.ejs") %>
+
+  
   
 </body>
 </html>
